--- a/README.textile
+++ b/README.textile
@@ -196,10 +196,9 @@ Then,
 
 <i>without any changes in the controller code!</i>
 
- <hr/>
+h2. Legal
 
-
-Copyright 2010 Sage
+*Copyright 2010 Sage*
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
